fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -1280,7 +1280,7 @@ form textarea {
       .degree .highlowtemp {
           opacity: 1;
           margin-top: -10px;
-          width: 140px; //120
+          width: 140px;
           background-color: #323544;
           color: #fff;
           text-align: center;
@@ -1850,17 +1850,17 @@ div#newLocation {
 
     /* width */
 ::-webkit-scrollbar {
-  width: 3px;
+  width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+  box-shadow: inset 0 0 35px rgba(255, 255, 255, 0.371);
+  border-radius: 1px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: rgb(45,48,61);
-  border-radius: 10px;
+  border-radius: 0px;
 }
